@@ -26,7 +26,10 @@
   <index>
     <title>Index</title>
   </index>
-  <index role="2.0">
-    <title>Index of new symbols in 2.0</title>
+  <index role="1.6">
+    <title>Index of new symbols in 1.6</title>
+  </index>
+  <index role="deprecated">
+    <title>Index of deprecated symbols</title>
   </index>
 </book>
